[project]
name = "agentenv-mcp"
version = "0.1.0"
description = "AgentGym environment with internal MCP tools - directional navigation"
authors = [
    {name = "AgentGym Contributors"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mcp = "agentenv_mcp.launch:launch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "requests>=2.31.0",
]
