[project]
name = "agentenv-mcp"
version = "0.2.0"
description = "AgentGym environment with MCP client/server architecture via SSE"
authors = [
    {name = "AgentGym Contributors"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "fastmcp>=0.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mcp = "agentenv_mcp.launch:launch"
mcp-client = "agentenv_mcp.launch_mcp:launch_mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "requests>=2.31.0",
]
